namespace UnoGame.Enums
{
    public enum Color
    {
        Red,
        Yellow,
        Green,
        Blue,
        Wild
    }
}