namespace UnoGame.Enums
{
    public enum Effect
    {
        Skip,
        Reverse,
        DrawTwo,
        Wild,
        WildDrawFour,
        NoEffect
    }
}