namespace UnoGame.Enums
{
    public enum Score
    {
        Number0 = 0,
        Number1 = 1,
        Number2 = 2,
        Number3 = 3,
        Number4 = 4,
        Number5 = 5,
        Number6 = 6,
        Number7 = 7,
        Number8 = 8,
        Number9 = 9,
        DrawTwo = 20,
        Skip = 20,
        Reverse = 20,
        Wild = 50,
        WildDrawFour = 50
    }
}